--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email Spam Classifier</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,19 +15,19 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #f4f4f4;
+            background-color: black;
         }
         .container {
             background: #fff;
-            padding: 20px;
+            padding: 30px;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
             width: 400px;
             text-align: center;
         }
         textarea {
             width: 100%;
-            height: 100px;
+            height: 150px;
             margin-bottom: 20px;
             padding: 10px;
             border: 1px solid #ccc;
@@ -46,12 +48,15 @@
 </head>
 <body>
     <div class="container">
-        <h1>Email Spam Classifier</h1>
-        <textarea id="emailContent" placeholder="Enter email content here..."></textarea>
-        <button onclick="classifyEmail()">Classify</button>
-        <p id="result"></p>
+        <h1 class="mb-4">Email Spam Classifier</h1>
+        <textarea id="emailContent" class="form-control" placeholder="Enter email content here..."></textarea>
+        <button onclick="classifyEmail()" class="btn btn-primary mt-3">Classify</button>
+        <p id="result" class="mt-3"></p>
     </div>
-
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
         function classifyEmail() {
             const emailContent = document.getElementById('emailContent').value;
@@ -63,3 +68,4 @@
     </script>
 </body>
 </html>
+    
