--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: black;
+            background-color: #121212;
+            color:white
+        }
+        h1 {
+            margin-top: 50px;
         }
         .container {
             background: #fff;
@@ -38,11 +42,16 @@
             border: none;
             background-color: #007BFF;
             color: #fff;
-            border-radius: 4px;
+            border-radius: 5px;
             cursor: pointer;
         }
         button:hover {
             background-color: #0056b3;
+        }
+        .result {
+            margin-top: 20px;
+            font-size: 20px;
+            font-weight: bold;
         }
     </style>
 </head>
