--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <span id="ham-text"></span>
             <div id="gif-container">
                 <img id="spamGif" src="https://media.giphy.com/media/d2jgpwowg1DRE7mw/giphy.gif?cid=ecf05e47nb89624ud09lexzmbh0lhc1fpfvoqgv7shnqdszc&ep=v1_gifs_search&rid=giphy.gif&ct=g" alt="Spam">
-                <img id="hamGif" src="C:/Users/pc/Downloads/Saul Goodman I Know What Youre Thinking GIF by Better Call Saul.gif" alt="Ham">
+                <img id="hamGif" src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExbjBjMDhzeDU1NzRkbDA1bTh0ZzFibHU0Z2Z1dzE3OWNiMGJ0dGZ3OSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/cM8bSE7vkBGbKJ0C6K/giphy.gif" alt="Ham">
             </div>
         </p>
     </div>
